--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script scr="smoothie.js" defer></script>
+    <title>Smoothie  machine assignment 2</title>
+    <P class="output"></P>
 </head>
 <body>
     
