--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <script scr="smoothie.js" defer></script>
     <title>Smoothie  machine assignment 2</title>
-    <P class="output"></P>
+    
 </head>
 <body>
-    
+    <h1> Please choose from options for your smoothie</h1>
+    <P class="app"></P>
 </body>
 </html>
