--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
     <script scr="smoothie.js" defer></script>
     <title>Smoothie machine assignment 2</title>
 
 </head>
-
 <body>
-    <h1> Please choose from options for your smoothie</h1>
-    <P class="app"></P>
-    <form class="form-horizontal">
+    <header>
+        <h1> Please choose from options for your smoothie</h1>
+    </header>
+    <p class="app"></p>
+    <form >
         <div class="form-group">
-            <label class="control-label col-sm-2" for="size">Size:</label>
-            <div class="col-sm-10">
+            <label for="size">Size:</label>
+            <div>
                 <select class="form-select" aria-label="Default select example">
                     <option selected></option>
                     <option value="1">Small</option>
@@ -31,18 +27,21 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="milk">Milk:</label>
-            <div class="col-sm-10">
+            <label for="liquid">Liquid Type:</label>
+            <div>
                 <select class="form-select" aria-label="Default select example">
                     <option selected></option>
-                    <option value="1">Yes</option>
-                    <option value="2">No</option>
+                    <option value="1">Dairy</option>
+                    <option value="2">Non-dairy</option>
+                    <option value="3">coconut water</option>
+                    <option value="4">Apple juice</option>
+                    <option value="5">Orange juice</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="smoothie type">Smoothie type:</label>
-            <div class="col-sm-10">
+            <label for="smoothie type">Smoothie type:</label>
+            <div>
                 <select class="form-select" aria-label="Default select example">
                     <option selected></option>
                     <option value="1">Banana</option>
@@ -54,20 +53,33 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="toppings">Toppings:</label>
-            <div class="col-sm-10">
+            <label for="toppings">Toppings:</label>
+            <div>
                 <select class="form-select" aria-label="Default select example">
                     <option selected></option>
-                    <option value=" 1">Banana</option>
-                    <option value="5">Strawberry</option>
-                    <option value="2">Apple</option>
+                    <option value="1">Banana</option>
+                    <option value="2">Strawberry</option>
+                    <option value="3">Apple</option>
                     <option value="4">Orange</option>
                     <option value="5">Pear</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
-            <div class=" col-sm-offset-2 col-sm-10">
+            <label for="toppings"> Extra Toppings:</label>
+            <div>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected></option>
+                    <option value="1">Banana</option>
+                    <option value="2">Strawberry</option>
+                    <option value="3">Apple</option>
+                    <option value="4">Orange</option>
+                    <option value="5">Pear</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="button">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
@@ -81,8 +93,14 @@
 
 
 
+    
 
-
+    
+    <footer>
+    </footer>
 </body>
+
+
+
 
 </html>
