--- a/index.html
+++ b/index.html
@@ -14,25 +14,75 @@
     <header>
         <h1>The Fantastic Smoothie shop</h1>
     </header>
-    <p class="app"></p>
+    
     <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
-    <form action="#">
-        <label for="size">Size:</label>
-        <select name="sizes" id="size">
-            <option value="small">Small</option>
-            <option value="medium">Medium</option>
-            <option value="large">Large</option>
-        </select>
-        <label for="liquid">Liquid Type:</label>
-        <select name="liquid" id="liquid">
-            <option value="dairy">Dairy</option>
-            <option value="non-dairy">Non-dairy</option>
-            <option value="coconut water">Coconut water</option>
-            <option value="Apple juice">Apple juice</option>
-            <option value="Orange juice">Orange juice</option>
-        </select>
-        <input type="submit" value="Submit" />
+    <form class="app">
+        Size:<br>
+        <div class="choice-1">
+            <input type="checkbox" id="small" name="small" value="small" />
+            <label for="small">Small</label>
+            <input type="checkbox" id="medium" name="medium" value="medium" />
+            <label for="medium">Medium</label>
+            <input type="checkbox" id="large" name="large" value="large" />
+            <label for="large">Large</label></br>
+        </div>
+
+        Smoothie juice:
+        <div class="choice 2">
+            <input type="checkbox" id="apple" name="apple juice" value="apple juice" />
+            <label for="apple">Apple juice</label><br>
+            <input type="checkbox" id="orange" name="orange" value="Orange" />
+            <label for="orange">Orange Juice</label><br>
+            <input type="checkbox" id="coconut" name="coconut" value="coconut" />
+            <label for="coconut juice">Coconut Juice</label><br>
+            <input type="checkbox" id="dragon" name="dragon" value="dragon" />
+            <label for="dragon friut juice">Dragon Fruit Juice</label><br>
+            <input type="checkbox" id="lemon" name="lemon" value="lemon" />
+            <label for="lemon juice">Lemon Juice</label><br>
+            <input type="checkbox" id="grape" name="grape" value="grape" />
+            <label for="grape juice">Grape Juice</label><br>
+        </div><br>
+        Toppings:
+        <div class="choice 3">
+            <input type="checkbox" id="strawberry" name="strawberry" value="strawberry" />
+            <label for="strawberry">strawberry</label><br>
+            <input type="checkbox" id="orange-slices" name="orange-slices" value="Orange-slices" />
+            <label for="orange-slices">Orange slices</label><br>
+            <input type="checkbox" id="apple-slices" name="apple-slices" value="apple-slices" />
+            <label for="apple-slices">apple slices</label><br>
+            <input type="checkbox" id="choclate-chunks" name="chocolate-chunks" value="chocolate-chunks" />
+            <label for="chocolate-chunk">chocolate chunk</label><br>
+            <input type="checkbox" id="lemon" name="lemon" value="lemon" />
+            <label for="lemon juice">Lemon Juice</label><br>
+            <input type="checkbox" id="whip-cream" name=" whip-cream" value="whip-cream" />
+            <label for="whip-cream">Whip Cream</label><br>
+        </div><br>
+        Dairy:
+        <div class="choice 4">
+            <input type="checkbox" id="decison1" name="decision1" value="decision1" />
+            <label for="yes">Yes</label><br>
+            <input type="checkbox" id="decison2" name="decision2" value="decision2" />
+            <label for="no">No</label><br>
+           
+        <input type="submit" value="submit" class="button">
+
     </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- </form> -->
     <!-- <form action="" method="GET" id="form1"> -->
