change to js and html id and selections

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
         Smoothie juice:
         <div class="choice 2">
-            <input type="checkbox" id="apple" name="apple juice" value="apple juice" />
-            <label for="apple">Apple juice</label><br>
+            <input type="checkbox" id="banana" name="banana" value="banana" />
+            <label for="banana juice">Banana juice</label><br>
             <input type="checkbox" id="orange" name="orange" value="Orange" />
             <label for="orange">Orange Juice</label><br>
-            <input type="checkbox" id="coconut" name="coconut" value="coconut" />
-            <label for="coconut juice">Coconut Juice</label><br>
-            <input type="checkbox" id="dragon" name="dragon" value="dragon" />
+            <input type="checkbox" id="pear" name="pear" value="pear" />
+            <label for="pear juice">Pear Juice</label><br>
+            <input type="checkbox" id="dragon-fruit" name="dragon-fruit" value="dragon-fruit" />
             <label for="dragon friut juice">Dragon Fruit Juice</label><br>
             <input type="checkbox" id="lemon" name="lemon" value="lemon" />
             <label for="lemon juice">Lemon Juice</label><br>
