--- a/index.html
+++ b/index.html
@@ -17,46 +17,46 @@
     
     <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
     <form class="form">
-        Size:<br>
+        <h2>Size:</h2><br>
         <div class="choice-1">
-            <input type="checkbox" id="small" name="small" value="small" />
-            <label for="small">Small</label>
-            <input type="checkbox" id="medium" name="medium" value="medium" />
-            <label for="medium">Medium</label>
-            <input type="checkbox" id="large" name="large" value="large" />
+            <input type="checkbox" id="selection1" name="small" value="small" />
+            <label for="small">Small</label><br>
+            <input type="checkbox" id="selection1" name="medium" value="medium" />
+            <label for="medium">Medium</label><br>
+            <input type="checkbox" id="selection1" name="large" value="large" />
             <label for="large">Large</label></br>
         </div><br>
-        Smoothie juice:
+        <h2>Smoothie juice:</h2>
         <div class="choice 2">
-            <input type="checkbox" id="banana" name="banana" value="banana" />
+            <input type="checkbox" id="selection2" name="banana" value="banana" />
             <label for="banana juice">Banana juice</label><br>
-            <input type="checkbox" id="orange" name="orange" value="Orange" />
+            <input type="checkbox" id="selection2" name="orange" value="Orange" />
             <label for="orange">Orange Juice</label><br>
-            <input type="checkbox" id="pear" name="pear" value="pear" />
+            <input type="checkbox" id="selection2" name="pear" value="pear" />
             <label for="pear juice">Pear Juice</label><br>
-            <input type="checkbox" id="dragon-fruit" name="dragon-fruit" value="dragon-fruit" />
+            <input type="checkbox" id="selection2" name="dragon-fruit" value="dragon-fruit" />
             <label for="dragon friut juice">Dragon Fruit Juice</label><br>
-            <input type="checkbox" id="lemon" name="lemon" value="lemon" />
+            <input type="checkbox" id="selection2" name="lemon" value="lemon" />
             <label for="lemon juice">Lemon Juice</label><br>
-            <input type="checkbox" id="grape" name="grape" value="grape" />
+            <input type="checkbox" id="selection2" name="grape" value="grape" />
             <label for="grape juice">Grape Juice</label><br>
         </div><br>
-        Toppings:
+        <h2>Toppings:</h2>
         <div class="choice 3">
             <input type="checkbox" id="strawberry" name="strawberry" value="strawberry" />
-            <label for="strawberry">strawberry</label><br>
+            <label for="strawberry">Strawberry</label><br>
             <input type="checkbox" id="orange-slices" name="orange-slices" value="Orange-slices" />
             <label for="orange-slices">Orange slices</label><br>
             <input type="checkbox" id="apple-slices" name="apple-slices" value="apple-slices" />
-            <label for="apple-slices">apple slices</label><br>
+            <label for="apple-slices">Apple slices</label><br>
             <input type="checkbox" id="choclate-chunks" name="chocolate-chunks" value="chocolate-chunks" />
-            <label for="chocolate-chunk">chocolate chunk</label><br>
+            <label for="chocolate-chunk">Chocolate chunk</label><br>
             <input type="checkbox" id="lemon" name="lemon" value="lemon" />
             <label for="lemon juice">Lemon Juice</label><br>
             <input type="checkbox" id="whip-cream" name=" whip-cream" value="whip-cream" />
             <label for="whip-cream">Whip Cream</label><br>
         </div><br>
-        Dairy:
+       <h2>Dairy:</h2>
         <div class="choice 4">
             <input type="checkbox" id="decison1" name="decision1" value="decision1" />
             <label for="yes">Yes</label><br>
@@ -66,7 +66,7 @@
         <input type="submit" value="submit" class="button">
             
     </form>
-    <p>output</p>
+    <p class="output"></p>
 
     <footer>
     </footer>
