--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <script scr="smoothie.js" defer></script>
+    <script src="smoothie.js" defer></script>
     <title>Smoothie machine assignment 2</title>
 
 </head>
@@ -20,41 +20,41 @@
         <form class="form1">
             <h2>Size:</h2><br>
             <div class="choice-1">
-                <input type="checkbox" id="check1" class="form-control" value="small" />
+                <input type="radio" id="check1" class="form-control" value="small" />
                 <label for="small">Small</label><br>
-                <input type="checkbox" id="check2" class="form-control" value="medium" />
+                <input type="radio" id="check2" class="form-control" value="medium" />
                 <label for="medium">Medium</label><br>
-                <input type="checkbox" id="check3" class="form-control" value="large" />
+                <input type="radio" id="check3" class="form-control" value="large" />
                 <label for="large">Large</label></br>
             </div><br>
             <h2>Smoothie juice:</h2>
             <div class="choice 2">
-                <input type="checkbox" id="check3" class="form-control" value="banana" />
+                <input type="checkbox" name="choice2[]" id="check3" class="form-control" value="banana" />
                 <label for="banana juice">Banana juice</label><br>
-                <input type="checkbox" id="check4" class="form-control" value="Orange" />
+                <input type="checkbox" name="choice2[]" id="check4" class="form-control" value="Orange" />
                 <label for="orange">Orange Juice</label><br>
-                <input type="checkbox" id="check5" class="form-control" value="pear" />
+                <input type="checkbox" name="choice2[]" id="check5" class="form-control" value="pear" />
                 <label for="pear juice">Pear Juice</label><br>
-                <input type="checkbox" id="check6" class="form-control" value="dragon-fruit" />
+                <input type="checkbox"name="choice2[]" id="check6" class="form-control" value="dragon-fruit" />
                 <label for="dragon friut juice">Dragon Fruit Juice</label><br>
-                <input type="checkbox" id="check6" class="form-control" value="lemon" />
+                <input type="checkbox"name="choice2[]" id="check6" class="form-control" value="lemon" />
                 <label for="lemon juice">Lemon Juice</label><br>
-                <input type="checkbox" id="check7" class="form-control" value="grape" />
+                <input type="checkbox" name="choice2[]" id="check7" class="form-control" value="grape" />
                 <label for="grape juice">Grape Juice</label><br>
             </div><br>
             <h2>Toppings:</h2>
             <div class="choice 3">
-                <input type="checkbox" id="check8" class="form-control" value="strawberry" />
+                <input type="checkbox" name="choice3[]" id="check8" class="form-control" value="strawberry" />
                 <label for="strawberry">Strawberry</label><br>
-                <input type="checkbox" id="check9" class="form-control" value="Orange-slices" />
+                <input type="checkbox"name="choice3[]" id="check9" class="form-control" value="orange-slices" />
                 <label for="orange-slices">Orange slices</label><br>
-                <input type="checkbox" id="check10" class="form-control" value="apple-slices" />
+                <input type="checkbox" name="choice3[]" id="check10" class="form-control" value="apple-slices" />
                 <label for="apple-slices">Apple slices</label><br>
-                <input type="checkbox" id="check11" class="form-control" value="chocolate-chunks" />
+                <input type="checkbox" name="choice3[]" id="check11" class="form-control" value="chocolate-chunks" />
                 <label for="chocolate-chunk">Chocolate chunk</label><br>
-                <input type="checkbox" id="check12" class="form-control" value="lemon" />
-                <label for="lemon juice">Lemon Juice</label><br>
-                <input type="checkbox" id="check13" class="form-control" value="whip-cream" />
+                <input type="checkbox" name="choice3[]" id="check12" class="form-control" value="lemon-slices" />
+                <label for="lemon juice">Lemon slices</label><br>
+                <input type="checkbox" name="choice3[]" id="check13" class="form-control" value="whip-cream" />
                 <label for="whip-cream">Whip Cream</label><br>
             </div><br>
             <h2>Dairy:</h2>
