--- a/index.html
+++ b/index.html
@@ -19,53 +19,61 @@
         <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
         <form class="form1">
             <h2>Size:</h2><br>
-            <div class="choice-1">
-                <input type="radio" id="check1" class="form-control" value="small" />
-                <label for="small">Small</label><br>
-                <input type="radio" id="check2" class="form-control" value="medium" />
-                <label for="medium">Medium</label><br>
-                <input type="radio" id="check3" class="form-control" value="large" />
-                <label for="large">Large</label></br>
+            <div class="choice1">
+                <div class="sizes">
+                    <input type="radio" name="choice1[]" class="form-control" value="small" />
+                    <label for="small">Small</label><br>
+                    <input type="radio" name="choice1[]" class="form-control" value="medium" />
+                    <label for="medium">Medium</label><br>
+                    <input type="radio" name="choice1[]" class="form-control" value="large" />
+                    <label for="large">Large</label></br>
+                </div>
             </div><br>
             <h2>Smoothie juice:</h2>
-            <div class="choice 2">
-                <input type="checkbox" name="choice2[]" id="check3" class="form-control" value="banana" />
-                <label for="banana juice">Banana juice</label><br>
-                <input type="checkbox" name="choice2[]" id="check4" class="form-control" value="Orange" />
-                <label for="orange">Orange Juice</label><br>
-                <input type="checkbox" name="choice2[]" id="check5" class="form-control" value="pear" />
-                <label for="pear juice">Pear Juice</label><br>
-                <input type="checkbox"name="choice2[]" id="check6" class="form-control" value="dragon-fruit" />
-                <label for="dragon friut juice">Dragon Fruit Juice</label><br>
-                <input type="checkbox"name="choice2[]" id="check6" class="form-control" value="lemon" />
-                <label for="lemon juice">Lemon Juice</label><br>
-                <input type="checkbox" name="choice2[]" id="check7" class="form-control" value="grape" />
-                <label for="grape juice">Grape Juice</label><br>
+            <div class="choice2">
+                <div class="juices">
+                    <input type="checkbox" name="choice2[]" class="form-control" value="banana" />
+                    <label for="banana juice">Banana juice</label><br>
+                    <input type="checkbox" name="choice2[]" class="form-control" value="Orange" />
+                    <label for="orange">Orange Juice</label><br>
+                    <input type="checkbox" name="choice2[]" class="form-control" value="pear" />
+                    <label for="pear juice">Pear Juice</label><br>
+                    <input type="checkbox" name="choice2[]" class="form-control" value="dragon-fruit" />
+                    <label for="dragon friut juice">Dragon Fruit Juice</label><br>
+                    <input type="checkbox" name="choice2[]" class="form-control" value="lemon" />
+                    <label for="lemon juice">Lemon Juice</label><br>
+                    <input type="checkbox" name="choice2[]" class="form-control" value="grape" />
+                    <label for="grape juice">Grape Juice</label><br>
+                </div>
             </div><br>
             <h2>Toppings:</h2>
-            <div class="choice 3">
-                <input type="checkbox" name="choice3[]" id="check8" class="form-control" value="strawberry" />
-                <label for="strawberry">Strawberry</label><br>
-                <input type="checkbox"name="choice3[]" id="check9" class="form-control" value="orange-slices" />
-                <label for="orange-slices">Orange slices</label><br>
-                <input type="checkbox" name="choice3[]" id="check10" class="form-control" value="apple-slices" />
-                <label for="apple-slices">Apple slices</label><br>
-                <input type="checkbox" name="choice3[]" id="check11" class="form-control" value="chocolate-chunks" />
-                <label for="chocolate-chunk">Chocolate chunk</label><br>
-                <input type="checkbox" name="choice3[]" id="check12" class="form-control" value="lemon-slices" />
-                <label for="lemon juice">Lemon slices</label><br>
-                <input type="checkbox" name="choice3[]" id="check13" class="form-control" value="whip-cream" />
-                <label for="whip-cream">Whip Cream</label><br>
+            <div class="choice3">
+                <div class="toppings">
+                    <input type="checkbox" name="choice3[]" id="check8" class="form-control" value="strawberry" />
+                    <label for="strawberry">Strawberry</label><br>
+                    <input type="checkbox" name="choice3[]" id="check9" class="form-control" value="orange-slices" />
+                    <label for="orange-slices">Orange slices</label><br>
+                    <input type="checkbox" name="choice3[]" id="check10" class="form-control" value="apple-slices" />
+                    <label for="apple-slices">Apple slices</label><br>
+                    <input type="checkbox" name="choice3[]" id="check11" class="form-control"value="chocolate-chunks" />
+                    <label for="chocolate-chunk">Chocolate chunk</label><br>
+                    <input type="checkbox" name="choice3[]" id="check12" class="form-control" value="lemon-slices" />
+                    <label for="lemon juice">Lemon slices</label><br>
+                    <input type="checkbox" name="choice3[]" id="check13" class="form-control" value="whip-cream" />
+                    <label for="whip-cream">Whip Cream</label><br>
+                </div>
             </div><br>
             <h2>Dairy:</h2>
-            <div class="choice 4">
-                <input type="checkbox" id="check14" class="form-control" value="decision1" />
-                <label for="yes">Yes</label><br>
-                <input type="checkbox" id="check15" class="form-control" value="decision2" />
-                <label for="no">No</label><br>
+            <div class="choice4">
+                <div class="decison">
+                    <input type="radio" name="choice4[]" id="check14" class="form-control" value="decision1" />
+                    <label for="yes">Yes</label><br>
+                    <input type="radio" name="choice4[]" id="check15" class="form-control" value="decision2" />
+                    <label for="no">No</label><br>
 
-                <input type="submit" value="submit" id="button">
-
+                    <input type="submit" value="submit" id="button">
+                </div>
+            </div>
         </form>
         <p class="output"></p>
 
