--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
-        <form class="form1">
+        <form  action="" method="POST">
             <h2>Size:</h2><br>
             <div class="choice1">
                 <div class="sizes">
