added new html to show form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
-        <form  action="" method="POST">
+        <form  action="./smoothie-choice.html" method="POST">
             <h2>Size:</h2><br>
             <div class="choice1">
                 <div class="sizes">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </form>
-        <p class="output"></p>
+        
 
         <footer>
         </footer>
