--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <header>
             <h1>The Fantastic Smoothie shop</h1>
         </header>
-
-        <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
-        <form  action="./smoothie-choice.html" method="POST">
+        <div>
+            <img src="images/brooke-cagle-8jp-6SjVibM-unsplash.jpg" alt="shop image" class="photo">
+        </div>
+        <form>
             <h2>Size:</h2><br>
             <div class="choice1">
                 <div class="sizes">
@@ -55,7 +56,8 @@
                     <label for="orange-slices">Orange slices</label><br>
                     <input type="checkbox" name="choice3[]" id="check10" class="form-control" value="apple-slices" />
                     <label for="apple-slices">Apple slices</label><br>
-                    <input type="checkbox" name="choice3[]" id="check11" class="form-control"value="chocolate-chunks" />
+                    <input type="checkbox" name="choice3[]" id="check11" class="form-control"
+                        value="chocolate-chunks" />
                     <label for="chocolate-chunk">Chocolate chunk</label><br>
                     <input type="checkbox" name="choice3[]" id="check12" class="form-control" value="lemon-slices" />
                     <label for="lemon juice">Lemon slices</label><br>
@@ -75,8 +77,10 @@
                 </div>
             </div>
         </form>
-        
 
+        <div>
+            <p class="output"></p>
+        </div>
         <footer>
         </footer>
     </main>
